@@ -283,5 +283,14 @@ SKIP: {
 		weight			=> 5.5,
 	);
 	
+	simple_test(
+		%std_opts,
+		service			=> 'UPSSTD', 
+		to_country		=> 'CA',
+		to_city			=> 'Richmond',
+		to_zip			=> 'V6X3E1',
+		weight			=> 0.5,
+	);
+	
 	
 }
